<resources>
    <string name="app_name">GODIVA</string>
    <string name="title_activity_login">Login Sign In</string>
    <string name="label_username">Email</string>
    <string name="label_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="button">Button</string>
    <string name="logo">Godiva_logo</string>
    <string name="LabelPackage">Package</string>
    <string name="action_Submit_Package">Submit</string>
    <string name="action_searching_for_custom_package">Searching for Custom Package?</string>
    <string name="LabelTipe">Prewedding / Wedding</string>
    <string name="LabelVideographer">Videographer :</string>
    <string name="LabelPhotographer">Photographer :</string>
    <string name="Labelstorybox">StoryBox Page :</string>
    <string name="LabelStoryBoard">Story Board :</string>
    <string name="LabelMoodBoard">Mood Board :</string>
    <string name="LabelCinematicStoryFilm">Cinematic Story Film :</string>
    <string name="LabelPhotoGalery">PhotoGalery :</string>
    <string name="LabelNote">Note :</string>
</resources>
