<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <EditText
        android:id="@+id/txtUsername"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/label_username"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/label_password"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        android:textColorLink="@color/colorPrimary" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/action_sign_up"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

</LinearLayout>