<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelVideographer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelVideographer" />

            <Spinner
                android:id="@+id/cmbVideoPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelPhotographer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelPhotographer" />

            <Spinner
                android:id="@+id/cmbPhotographer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelStoryBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Labelstorybox" />
            <Spinner
                android:id="@+id/cmbStoryBoxPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelPhotoGalery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelPhotoGalery" />
            <Spinner
                android:id="@+id/cmbPhotoGalery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelStoryBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelStoryBoard" />

            <CheckBox
                android:id="@+id/cbStoryBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelMoodBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelMoodBoard" />

            <CheckBox
                android:id="@+id/cbMoodBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LabelCinematicFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LabelCinematicStoryFilm" />

            <CheckBox
                android:id="@+id/cbStoryFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TextView
            android:id="@+id/LabelNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LabelNote" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSubmitPackage"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_Submit_Package"
            android:textColor="@android:color/white"
            android:textColorLink="@color/colorPrimary" />

    </TableLayout>

</LinearLayout>