<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.godiva.godiva.MainActivity">

    <TextView
        android:id="@+id/LabelPackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LabelPackage" />

    <Spinner
        android:id="@+id/SpinnerPackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/ListViewDetailPackage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btnSubmitPackage"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_Submit_Package"
        android:textColor="@android:color/white"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/LabelCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_searching_for_custom_package"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
